--- a/app/views/users/dashboard/tabs/articles/_preview_post_content.html.erb
+++ b/app/views/users/dashboard/tabs/articles/_preview_post_content.html.erb
@@ -1,6 +1,6 @@
 <div class="published-article-modal pitch_preview_wrapper pt-2">
   <div class="flex_child mr-3">
-    <%= link_to image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp').processed, class: "image_half_left mb-4"), post %>
+    <%= link_to image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), class: "image_half_left mb-4"), post %>
   </div>
   <div class="flex_child">
     <h3><i><%= link_to post.title, post %></i></h3>
