--- a/app/views/application_mailer/invitation_to_apply.html.erb
+++ b/app/views/application_mailer/invitation_to_apply.html.erb
@@ -424,7 +424,7 @@
                         <div style="text-align: center; padding: 40px 20px;">
                           <div class="position-relative" style="width: 120px; margin: 0 auto;">
                             <% if @user.profile.attached? %>
-                              <img src="http:<%= @user.profile.variant(resize_to_fill: [100,100], format: 'webp').processed %>" class="profile_img" alt="<%= @user.profile.variant(resize_to_fill: [100,100]) %>" >
+                              <img src="http:<%= @user.profile.variant(resize_to_fill: [100,100], format: 'webp') %>" class="profile_img" alt="<%= @user.profile.variant(resize_to_fill: [100,100]) %>" >
                             <% else %>
                               <%= image_tag("https://www.theteenmagazine.com/assets/profile_image-d8facbb469f1bc2077639f9d92f2c56bbf1b5c7e144045d67a2aa0f80364ba41.jpg", :class => "profile_img") %>
                             <% end %>
