--- a/app/views/pages/trending.html.erb
+++ b/app/views/pages/trending.html.erb
@@ -11,7 +11,7 @@
           <% @trending.each do |post| %>
             <div class="thumbnail">
               <div class="container--image">
-                <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540, 340], format: "webp").processed, :class => "image_thumbnail"), post )%>
+                <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540, 340], format: "webp"), :class => "image_thumbnail"), post )%>
               </div>
               <div class="thumbnail--container">
                 <h3 class="article_title">
