--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -91,7 +91,7 @@
             <ul class="list-group list-group-flush whats-new">
               <% @pitches.each do |pitch| %>
                 <li class="list-group-item">
-                  <% @profile_img = pitch.user.profile.attached? ? image_tag(pitch.user.profile.variant(resize_to_fill: [100, 100], format: 'webp').processed, :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
+                  <% @profile_img = pitch.user.profile.attached? ? image_tag(pitch.user.profile.variant(resize_to_fill: [100, 100], format: 'webp'), :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
                   <%= link_to(@profile_img, pitch.user) %>
                   <div><%= link_to(pitch.user.try(:full_name), pitch.user, class: "link_nrml") %> pitched <%= link_to(pitch.title, pitch, class: "link_nrml") %>
                   <br><span class="date_ago"><%= time_ago_in_words(pitch.created_at) %> ago</span></div>
