--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
         <div class="profiles">
           <a href= "/writers/<%= user.slug %>/edit">
             <% if user.profile.attached? %>
-              <%= image_tag(user.profile.variant(resize_to_fill: [100, 100], format: 'webp').processed, :class => "profile_img") %>
+              <%= image_tag(user.profile.variant(resize_to_fill: [100, 100], format: 'webp'), :class => "profile_img") %>
             <% else %>
               <%= image_tag("profile_image.jpg", :class => "profile_img") %>
             <% end %>
