--- a/app/views/users/sponsored.html.erb
+++ b/app/views/users/sponsored.html.erb
@@ -8,7 +8,7 @@
           <% @published.each do |post| %>
             <div class="thumbnail">
               <div class="container--image">
-                <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp').processed, :class => "image_thumbnail"), post )%>
+                <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), :class => "image_thumbnail"), post )%>
               </div>
               <div class="thumbnail--container">
                 <p class="date_post_preview"><%= post.category.name %></p>
