added back config.active_storage.variant_processor and removed format webp

--- a/app/views/application_mailer/send_pitches.html.erb
+++ b/app/views/application_mailer/send_pitches.html.erb
@@ -504,7 +504,7 @@ Topic Ideas</span></h1>
     </tr>
 </tbody>
 </table>
-<a target="_blank" href="https://www.theteenmagazine.com/pitches/<%= @pitches.first.slug %>"><img src="http:<%= @pitches.first.thumbnail.variant(resize_to_fill: [540, 380], format: "webp") %>" alt="<%= @pitches.first.thumbnail.variant(resize_to_fill: [540, 380], format: "webp") %>"></a>
+<a target="_blank" href="https://www.theteenmagazine.com/pitches/<%= @pitches.first.slug %>"><img src="http:<%= @pitches.first.thumbnail.variant(resize_to_fill: [540, 380]) %>" alt="<%= @pitches.first.thumbnail.variant(resize_to_fill: [540, 380]) %>"></a>
 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock" style="min-width: 100%;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
 <tbody class="mcnTextBlockOuter">
     <tr>
