--- a/app/views/welcome/partials/_recents.html.erb
+++ b/app/views/welcome/partials/_recents.html.erb
@@ -1,7 +1,7 @@
 <div class="ctgry_section">
   <% @posts_approved_last.each do |post| %>
     <div class="ctgry_article recent mb-4">
-      <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [560,280], format: "webp"), alt: post.title, class: "image_recent_articles"), post )%>
+      <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [560,280]), alt: post.title, class: "image_recent_articles"), post )%>
       <h1><%= link_to post.title, post %></h1>
       <p class="category"><%= link_to(post.category.name, post.category) %></p>
       <p><%= post.publish_at.in_time_zone.strftime("%A, %b %d")%></p>
