--- a/app/views/outreaches/show.html.erb
+++ b/app/views/outreaches/show.html.erb
@@ -1,45 +1,22 @@
 <div class="skinny_wrapper onboarding pt-4">
   <div class="onboarding_page_container">
-    <div class="position-relative" style="width: 120px; margin: 0 auto;">
-      <% if @user.profile.attached? %>
-        <%= image_tag(@user.profile.variant(resize_to_fill: [100,100]), :class => "profile_img") %>
-      <% else %>
-        <%= image_tag("profile_image.jpg", :class => "profile_img") %>
-      <% end %>
-    </div>
-    <div class="text-center">
-      <h1>You've been sent an article proposal!</h1>
-      <p>Please complete the following steps to review the article proposal from
-        <%= link_to @user.full_name, @user, :target => "_blank", :class => "link_green" %>.
-      </p>
-    </div>
-    <div class="stair_step">
-      <a href="/editor-onboarding?step=welcome" class="node">
-        <span class="progress_step">
-          &#x25cf;
-          <p>Proposal</p>
-        </span>
-      </a>
-      <span class="progress_step">&#x25CB;
-        <p>Account</p>
-      </span>
-      <span class="progress_step">&#x25CB;
-        <p>Payment</p>
-      </span>
-      <div class="hr">
-        <hr />
-        <hr />
-      </div>
-    </div>
+    <h1>The Teen Magazine & <%= @outreach.partner_name %></h1>
+    <h2 class="mb-3">Article price: $<%= number_with_precision(@outreach.sponsored_article_cost, precision: 2) %></h2>
     <div id="onboarding_page">
-      <b>Article price: $<%= number_with_precision(@outreach.sponsored_article_cost, precision: 2) %></b>
-      <i style="opacity: 80%;" class="d-block mb-3">
-        We take pride in delivering exceptional work to our partners.
-        If for any reason you are not happy with the finished article, 
-        we offer a money-back guarantee before it's published.
-      </i>
-      <%= markdown(@outreach.sponsored_article_pitch) %>
-    </div>
-    <%= link_to "Accept & Continue", :id => "onboarding_button" %>
+      <p>This article will be written by one of our most experienced writers, <%= link_to @user.full_name, @user, target: "_blank" %>, and will by edited by The Teen Magazine's CEO <%= link_to 'Mia Johansson', user_path(User.find('mia-johansson')), target: "_blank" %>.</p>
+      <%= render "/users/profile", user: @user %>
+    </p>
   </div>
+  <div class="submit-button align-right mt-4">
+    <div class="hide spinner-button spinner-border" style="margin-left: 39%;" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+    <%= link_to "Sounds great!", '#', class: "submit-button-inner" %>
+  </div>
+  <i style="opacity: 80%;" class="d-block mb-3">
+    The Teen Magazine cares about our relationships with our partners. We want to make you as happy as possible, and we strive
+    to always deliver timely and high-quality articles. If however, you are not happy with the draft for whatever reason,
+    our editor team will refund you all the money for the article and we will not publish it.
+  </i>
+</div>
 </div>
