--- a/app/views/outreaches/show.html.erb
+++ b/app/views/outreaches/show.html.erb
@@ -16,11 +16,11 @@
     to always deliver timely and high-quality articles. If you are not happy with the draft for whatever reason,
     our editor team will refund you all the money for the article and we will not publish it.
   </i>
-  <div class="submit-button align-right mt-4">
+  <div class="submit-button submit-button-green align-right mt-4">
     <div class="hide spinner-button spinner-border" style="margin-left: 39%;" role="status">
       <span class="sr-only">Loading...</span>
     </div>
-    <%= link_to "Continue to Payment", '#', class: "submit-button-inner" %>
+    <%= link_to "Continue to Payment", checkout_path, class: "submit-button-inner" %>
   </div>
 </div>
 </div>
