--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -386,11 +386,16 @@ body {
 }
 
 // BUTTONS
+.submit-button-green {
+    background-color: #4abeb6 !important;
+    border-color: #4abeb6 !important;
+}
+
 .submit-button {
     background-color: #2a2a2a;
     width: fit-content;
     block-size: fit-content;
-    border: 1px solid #2a2a2a !important;
+    border: 1px solid #2a2a2a;
     padding: 10px 30px;
     text-decoration: none !important;
     z-index: 100;
