created shareable link for interviews and interview page accessible to marketing writers

--- a/app/views/application_mailer/pitch_deleted.html.erb
+++ b/app/views/application_mailer/pitch_deleted.html.erb
@@ -16,7 +16,7 @@
     <h3><%= @pitch.title %> (deleted)</h3>
     <p><%= @pitch.description %></p>
     <img class="image_max_400" src="http:<%= @pitch.thumbnail.variant(resize_to_fill: [540, 380]) %>" alt="<%= @pitch.title %> thumbnail image">
-    <p>An admin reserves the right to delete pitches from Editor Pitches within 48 hours of it being created. Deleted pitches will not be counted toward your 10 required pitches every month. If you have any questions about this decision, please reach out to mia@theteenmagazine.com with clarifying questions.</p>
+    <p>An admin reserves the right to delete pitches from Editor Pitches within 48 hours of it being created. Deleted pitches will not be counted toward your required pitches every month. If you have any questions about this decision, please reach out to mia@theteenmagazine.com with clarifying questions.</p>
     <p>The Teen Magazine</p>
   </body>
 </html>
