--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -46,7 +46,7 @@
           <li><a href="/categories/culture">Culture</a></li>
           <li><a href="/categories/relationships">Relationships</a></li>
           <li><a href="/categories/lifestyle">Lifestyle</a></li>
-          <li><a href="/categories/op-ed">Op-Ed</a></li>
+          <li><a href="/categories/opinion">Opinion</a></li>
         </ul>
       </div>
       <!-- Grid column -->
