--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -25,7 +25,7 @@
       <a class="link" href="/categories/culture">Culture</a>
       <a class="link" href="/categories/relationships">Relationships</a>
       <a class="link" href="/categories/lifestyle">Lifestyle</a>
-      <a class="link" href="/categories/op-ed">Op-Ed</a>
+      <a class="link" href="/categories/opinion">Op-Ed</a>
       <a class="link" href="/apply">Apply</a>
       <%= link_to "Log in", get_profile_path, class: "link" %>
     </nav>
