--- a/app/views/layouts/partials/_writer-dropdown-menu.html.erb
+++ b/app/views/layouts/partials/_writer-dropdown-menu.html.erb
@@ -13,6 +13,13 @@
       <a href="<%= pitches_path(user_id: current_user.id) %>" class="dropdown-item">My Pitches</a>
   <% end %>
   <% if !current_user.partner? %>
+    <% if current_user.is_marketer? %>
+      <a href="/interviews" class="dropdown-item">Unclaimed Interviews
+      <% if @unseen_interviews_cnt > 0 %>
+        <span class="sec counter counter-sm"></span><p><%= @unseen_interviews_cnt %> new</p>
+      <% end %>
+    </a>
+    <% end %>
     <a href="/pitches" class="dropdown-item">Unclaimed Pitches
       <% if @unseen_pitches_cnt > 0 %>
         <span class="sec counter counter-sm"></span><p><%= @unseen_pitches_cnt %> new</p>
