--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -24,6 +24,8 @@
     <%= render '/posts/banner_status' %>
   <% elsif @post.is_locked? %>
     <p class= "banner_stts">Locked</p>
+  <% elsif !params[:shareable_token].nil? && (params[:shareable_token] == @post.shareable_token) %>
+    <p class= "banner_stts">This draft has been shared with you. It has not been published yet.</p>
   <% elsif @post.pitch.present? %>
     <p class= "banner_stts">In Progress | Review this draft's pitch <%= link_to("here", @post.pitch, target: "_blank", class: "link_white") %></p>
   <% else %>
@@ -94,15 +96,20 @@
               <div id="selectable_content" class="post_content">
                 <%= markdown @post.content %>
               </div>
-              <% if current_user && (current_user.id == @post.user_id || (@post.collaboration&.include? current_user.email) || current_user.admin?) %>
-                <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
-                  <% if !(@post.is_locked?) %>
-                    <%= link_to "Edit Article", edit_post_path(@post), style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
+              <% if params[:shareable_token].nil? %>
+                <% if current_user && (current_user.id == @post.user_id || (@post.collaboration&.include? current_user.email) || current_user.admin?) %>
+                  <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
+                    <% if !(@post.is_locked?) %>
+                      <%= link_to "Edit Article", edit_post_path(@post), style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
+                    <% end %>
+                    <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
+                      <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
+                    <% end %>
+                  </div>
+                  <% if @post.is_interview? %>
+                    <%= render "posts/partials/shareable_link", shareable_token: @post.shareable_token %>
                   <% end %>
-                  <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
-                    <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
-                  <% end %>
-                </div>
+                <% end %>
               <% end %>
               <div id= "background">
                 <%= render :partial => 'users/profile', locals: {user: @user} %>
@@ -114,17 +121,22 @@
           </div>
         </div>
       </div>
-      <div class="share_article_feedback">
-        <% if @post.partner_id.present? %>
-          <%= render :partial => 'posts/partials/partner_comments', locals: {partner: @partner, post: @post, comments: @comments, comment: @comment} %>
-        <% elsif @post.sharing %>
-          <%= render :partial => 'posts/partials/sharing_on', locals: {user: @user, post: @post, comments: @comments, comment: @comment}  %>
-        <% elsif (current_user.admin? || current_user.id == @post.user_id) %>
-          <%= render :partial => 'posts/partials/sharing_off', locals: {post: @post} %>
-        <% end %>
-      </div>
+      <% if params[:shareable_token].nil? %>
+        <div class="share_article_feedback">
+          <% if @post.partner_id.present? %>
+            <%= render :partial => 'posts/partials/partner_comments', locals: {partner: @partner, post: @post, comments: @comments, comment: @comment} %>
+          <% elsif @post.sharing %>
+            <%= render :partial => 'posts/partials/sharing_on', locals: {user: @user, post: @post, comments: @comments, comment: @comment}  %>
+          <% elsif (current_user.admin? || current_user.id == @post.user_id) %>
+            <%= render :partial => 'posts/partials/sharing_off', locals: {post: @post} %>
+          <% end %>
+        </div>
+      <% else %>
+        <%= render 'posts/partials/side_bar_published', post: @post %>
     </div>
-  </div>
+  <% end %>
+</div>
+</div>
 </div>
 <script type="text/javascript">
   window.onload = function () {
