interviewee can submit a request

--- a/app/views/pitches/_interview_explanation.html.erb
+++ b/app/views/pitches/_interview_explanation.html.erb
@@ -1,11 +1,10 @@
 <div class="alert alert-info" role="alert">
   <p class="m-0 mt-2">
     <% if home %>
-      These interview pitches have been submitted by content creators or PR agents using <%= link_to "this", "#" %> form. 
+      These interview pitches have been submitted by content creators or PR agents. 
       There is an email associated with each pitch which you will use to contact them. 
     <% else %>
-      This interview pitch was submitted by a content creator or PR agent using <%= link_to "this", "#" %> form. 
-      You can find their contact email in the pitch description.
+      This interview pitch was submitted by a content creator or PR agent. 
     <% end %>
     After claiming an interview, follow these steps: 
   </p>
