--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="wrapper_home">
-    <h1 class="section--title"><a href="/categories/q-a-w-influencers">q&a w/ influencers</a></h1>
+    <h1 class="section--title"><a href="/categories/interviews">interviews</a></h1>
     <div class="flex--welcome">
       <div class="flex-1">
         <%= render_async_cache get_category_1_welcome_path, retry_count: 3 do %>
