--- a/app/assets/stylesheets/_used_bootstrap.css.scss
+++ b/app/assets/stylesheets/_used_bootstrap.css.scss
@@ -1,138 +1,135 @@
 // lists
-
 .list-unstyled {
-  padding-left: 0;
-  list-style: none;
+    padding-left: 0;
+    list-style: none;
 }
 
 // text styles
-
 .text-center {
-  text-align: center !important;
+    text-align: center !important;
 }
 
 .font-weight-bold {
-  font-weight: 700 !important;
+    font-weight: 700 !important;
 }
 
 .text-uppercase {
-  text-transform: uppercase !important;
+    text-transform: uppercase !important;
 }
 
 .font-small {
-  font-size: 0.9rem;
+    font-size: 0.9rem;
 }
 
 // margins
 .m-0 {
-  margin: 0 !important;
+    margin: 0 !important;
 }
 
 .mx-auto {
-  margin-right: auto !important;
+    margin-right: auto !important;
 }
 
 .mb-auto,
 .my-auto {
-  margin-bottom: auto !important;
+    margin-bottom: auto !important;
 }
 
 .ml-auto,
 .mx-auto {
-  margin-left: auto !important;
+    margin-left: auto !important;
 }
 
 .mt-4 {
-  margin-top: 1.5rem !important;
+    margin-top: 1.5rem !important;
 }
 
 .mb-4 {
-  margin-bottom: 1.5rem !important;
+    margin-bottom: 1.5rem !important;
 }
 
 .mr-1 {
-  margin-right: 0.25rem !important;
+    margin-right: 0.25rem !important;
 }
 
 .mb-1,
 .my-1 {
-  margin-bottom: 0.25rem !important;
+    margin-bottom: 0.25rem !important;
+}
+
+.mb-0 {
+    margin-bottom: 0rem !important;
 }
 
 svg,
 img {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 // padding
-
 .pt-4 {
-  padding-top: 1.5rem !important;
+    padding-top: 1.5rem !important;
 }
 
 .pb-3 {
-  padding-bottom: 1.5rem !important;
+    padding-bottom: 1.5rem !important;
 }
 
 .py-3 {
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
 }
 
 // footer
-
 footer.page-footer {
-  bottom: 0;
-  color: #fff;
+    bottom: 0;
+    color: #fff;
 }
 
 footer.page-footer .container-fluid {
-  width: auto;
+    width: auto;
 }
 
 footer.page-footer .footer-copyright {
-  overflow: hidden;
-  color: rgba(255, 255, 255, 0.6);
-  background-color: rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 footer.page-footer a {
-  color: #fff;
+    color: #fff;
 }
 
 .badge {
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
-    0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  display: inline-block;
-  padding: 0.4em 0.6em;
-  font-size: 75%;
-  font-weight: 700;
-  line-height: 1;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  color: white !important;
-  border-radius: 0.125rem;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    display: inline-block;
+    padding: 0.4em 0.6em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    color: white !important;
+    border-radius: 0.125rem;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .bg-primary {
-  background-color: #f0255e !important;
+    background-color: #f0255e !important;
 }
 
 // responsive
-
 @media (min-width: 768px) {
-  .text-md-left {
-    text-align: left !important;
-  }
-  .text-md-right {
-    text-align: right !important;
-  }
-  .text-md-center {
-    text-align: center !important;
-  }
+    .text-md-left {
+        text-align: left !important;
+    }
+    .text-md-right {
+        text-align: right !important;
+    }
+    .text-md-center {
+        text-align: center !important;
+    }
 }
