--- a/app/assets/stylesheets/pitches.scss
+++ b/app/assets/stylesheets/pitches.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the pitches controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+#pitch-interview-card {
+    width: 48%;
+    h4 {
+        margin: 0px;
+    }
+    .card-text {
+        margin: 0px;
+    }
+    #btn_dark {
+        margin-top: -10px;
+    }
+    .z-index-wrapper {
+        z-index: 1000;
+        position: relative;
+    }
+}
