--- a/app/views/layouts/partials/_writer-dropdown-menu.html.erb
+++ b/app/views/layouts/partials/_writer-dropdown-menu.html.erb
@@ -14,7 +14,7 @@
   <% end %>
   <% if !current_user.partner? %>
     <% if current_user.is_marketer? %>
-      <a href="/interviews" class="dropdown-item">Unclaimed Interviews
+      <a href="/interviews" class="dropdown-item">Interview Requests
       <% if @unseen_interviews_cnt > 0 %>
         <span class="sec counter counter-sm"></span><p><%= @unseen_interviews_cnt %> new</p>
       <% end %>
