--- a/app/views/pitches/pitch_interview.html.erb
+++ b/app/views/pitches/pitch_interview.html.erb
@@ -1,7 +1,7 @@
 <%= image_tag "reading_magazine_auto_x2.jpg", id: "banner_writing" %>
 <div class="apply_wrapper">
   <h3>WANT TO BE FEATURED?</h3>
-  <p>Fill out this form and one of our writers will be in contact with you if you're chosen. See our past interviews <a target="_blank" class="link_grn" href="/categories/q-a-w-influencers">here</a>.</p>
+  <p>Fill out this form and one of our writers will be in contact with you if you're chosen. See our past interviews <a target="_blank" class="link_grn" href="/categories/interviews">here</a>.</p>
   <%= form_for @pitch do |f| %>
     <% if @pitch.errors.any? %>
       <h6 class="mt-3 text-danger"><%= pluralize(@pitch.errors.count, "error")%> prevented this pitch from saving:</h6>
@@ -32,10 +32,10 @@
       <%= f.hidden_field :deadline, :value => 6 %>
       <br>
       <br>
-      <%= f.text_area :description, placeholder: "Any other relevant info...", style: "min-height: 120px;" %>
+      <%= f.text_area :description, placeholder: "Description about interviewee...", style: "min-height: 120px;" %>
       <div class="btn_cntnr" style="float: none; position: relative; margin-bottom: 0px; padding-bottom: 0px;">
         <div class="spinner-button spinner-border hide" style="margin-left: 38%;" role="status">
-          <span class="sr-only">Loading...</span>
+          <span class="sr-only"></span>
         </div>
         <%= f.button "Submit Request", class: "newpost--new--profile submit_modal", id: "submit-comment-modal-button", style: "margin-bottom: 0px;", value: "interview" %>
       </div>
