added interviewer badge

--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -247,6 +247,11 @@
         top: 25px;
         position: absolute;
     }
+    .marketer_label {
+        right: -20px;
+        top: 25px;
+        position: absolute;
+    }
     .list-group-flush div {
         border-color: whitesmoke;
         border-width: 1px !important;
