--- a/app/views/application_mailer/featured_article.html.erb
+++ b/app/views/application_mailer/featured_article.html.erb
@@ -9,7 +9,7 @@
 
   <body>
     <h1>You're featured!</h1>
-    <p><%= @user.first_name %>, we loved your article, <%= link_to @post.title, @post %> so much we wanted to promote it more! It is now pinned at the top of The Teen Magazine's home page. Congratulations!</p>
+    <p><%= @user.first_name %>, we loved your article, <%= link_to @post.title, @post %>, so much we wanted to promote it more! It is now pinned at the top of The Teen Magazine's home page. Congratulations!</p>
     <p>Best Regards,<br/>Editor Team</p>
   </body>
 </html>
